--- a/Scraper.jl/Project.toml
+++ b/Scraper.jl/Project.toml
@@ -4,10 +4,12 @@ authors = ["Eve <evecheng999@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+AndExport = "4484d908-372d-4f90-b90b-0ec97f005b8c"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
+RegularExpressions = "27faeba3-bc54-5829-b163-df8cb949fe88"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
