--- a/Scraper.jl/Project.toml
+++ b/Scraper.jl/Project.toml
@@ -13,4 +13,5 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 RegularExpressions = "27faeba3-bc54-5829-b163-df8cb949fe88"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
