interjecting node acquired

--- a/Scraper.jl/Project.toml
+++ b/Scraper.jl/Project.toml
@@ -14,6 +14,7 @@ EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
+Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 RegularExpressions = "27faeba3-bc54-5829-b163-df8cb949fe88"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
