--- a/Scraper.jl/Project.toml
+++ b/Scraper.jl/Project.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 AndExport = "4484d908-372d-4f90-b90b-0ec97f005b8c"
+ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
+BetterInputFiles = "c0b1955d-4702-4680-a946-720482e78a48"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Cascadia = "54eefc05-d75b-58de-a785-1a3403f0919f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -14,6 +16,7 @@ EzXML = "8f5d6c58-4d21-5cfd-889c-e3ad7ee6a615"
 Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 RegularExpressions = "27faeba3-bc54-5829-b163-df8cb949fe88"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
