--- a/Scraper.jl/src/scrape_set_up.toml
+++ b/Scraper.jl/src/scrape_set_up.toml
@@ -1,4 +1,4 @@
-[ P_option ]
+[ p_option ]
 #if for each p, look for the parent a node and scrape the talker from a, if off, the edit_ function will tribute the unknown speaker to the one above after edit_. But in the raw material it would be N/A
 a_asparent = true
 
@@ -8,6 +8,10 @@ talker_name_into_content = true
 [ xpaths ]
  question = "chamber.xscript//question"
  answer = "chamber.xscript//answer"
+ subdiv_1 = "//p"
+ subdiv_talker = "//a"
+ interjection = "//interjection"
+ interjection_content = "//talk.text"
 
 
 
