--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -4,7 +4,11 @@ A_ASPARENT = true
 
 [XPATHS]
 QUESTION = "chamber.xscript//question"
+INTERJECTION = "//interjection"
+SUBDIV_1 = "//p"
+INTERJECTION_CONTENT = "//talk.text"
 ANSWER = "chamber.xscript//answer"
+SUBDIV_TALKER = "//a"
 
 [GLOBAL]
 BASE_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/"
