--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -6,10 +6,15 @@ INTER_UNDER_NODE = true
 SEP_BY_SUBDIV_1 = true
 TALKER_NAME_INTO_CONTENT = true
 
+[TALKER_OPTION]
+GET_ALL_TEXT = true
+
 [XPATHS]
 QUESTION = "chamber.xscript//question"
 TALK_CONTENT = "//talk.text"
 INTERJECTION = "//interjection"
+CONTINUE = "//continue"
+TALK_NODE = "//talk.start"
 SUBDIV_1 = "//p"
 TALKER = "//talker"
 ANSWER = "chamber.xscript//answer"
@@ -26,4 +31,4 @@ OUTPUT_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/Output"
 
 [METADATA]
 ORIGINAL = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/scrape_set_up.toml"
-DATE = "2024-04-12"
+DATE = "2024-04-17"
