--- a/Scraper.jl/Project.toml
+++ b/Scraper.jl/Project.toml
@@ -21,4 +21,5 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 RegularExpressions = "27faeba3-bc54-5829-b163-df8cb949fe88"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SQLite = "0aa819cd-b072-5ff4-a722-6bc24af294d9"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
