--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -7,14 +7,15 @@ TALKER_NAME_INTO_CONTENT = true
 GET_ALL_TEXT = true
 
 [XPATHS]
-QUESTION = "chamber.xscript//question"
+QUESTION = "//question"
 TALK_CONTENT = "//talk.text"
 INTERJECTION = "//interjection"
-CONTINUE = "//continue"
+DEBATE_TITLE = "/debateinfo/title"
 TALK_NODE = "//talk.start"
+CONTINUE = "//continue"
 SUBDIV_1 = "//p"
 TALKER = "//talker"
-ANSWER = "chamber.xscript//answer"
+ANSWER = "//answer"
 SUBDIV_1_TALKER = "//a"
 
 [GLOBAL]
@@ -26,7 +27,10 @@ OUTPUT_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/Output"
 
 [METADATA]
 ORIGINAL = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/scrape_set_up.toml"
-DATE = "2024-04-22"
+DATE = "2024-04-23"
+
+[SECTION_XPATHS]
+"QUESTIONS WITHOUT NOTICE" = ["/hansard/chamber.xscript/debate[18]", "/hansard/chamber.xscript/debate[20]"]
 
 [QUESTION_OPTION]
 QUESTIONS_WITHOUT_NOTICE = true
