--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -3,6 +3,9 @@ INTER_UNDER_NODE = true
 SEP_BY_SUBDIV_1 = true
 TALKER_NAME_INTO_CONTENT = true
 
+[WHICH_SECTIONS]
+"QUESTIONS WITHOUT NOTICE" = true
+
 [TALKER_OPTION]
 GET_ALL_TEXT = true
 
