--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -30,10 +30,26 @@ OUTPUT_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/Output"
 
 [METADATA]
 ORIGINAL = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/scrape_set_up.toml"
-DATE = "2024-04-23"
+DATE = "2024-04-24"
 
 [SECTION_XPATHS]
+"MATTERS OF PUBLIC IMPORTANCE" = ["/hansard/chamber.xscript/debate[26]"]
+PETITIONS = ["/hansard/chamber.xscript/debate[9]"]
+"STATEMENTS BY MEMBERS" = ["/hansard/chamber.xscript/debate[14]"]
+"STATEMENTS ON SIGNIFICANT MATTERS" = ["/hansard/chamber.xscript/debate[1]"]
+DOCUMENTS = ["/hansard/chamber.xscript/debate[24]"]
+"STATEMENTS ON INDULGENCE" = ["/hansard/chamber.xscript/debate[16]"]
+MINISTRY = ["/hansard/chamber.xscript/debate[17]"]
+"PARLIAMENTARY ZONE" = ["/hansard/chamber.xscript/debate[4]"]
+CONDOLENCES = ["/hansard/chamber.xscript/debate[15]"]
+"QUESTIONS TO THE SPEAKER" = ["/hansard/chamber.xscript/debate[6]"]
+COMMITTEES = ["/hansard/chamber.xscript/debate[8]", "/hansard/chamber.xscript/debate[10]"]
+BILLS = ["/hansard/chamber.xscript/debate[3]", "/hansard/chamber.xscript/debate[5]", "/hansard/chamber.xscript/debate[7]", "/hansard/chamber.xscript/debate[11]", "/hansard/chamber.xscript/debate[13]", "/hansard/chamber.xscript/debate[27]"]
+STATEMENTS = ["/hansard/chamber.xscript/debate[21]", "/hansard/chamber.xscript/debate[23]"]
+"STATEMENT BY THE SPEAKER" = ["/hansard/chamber.xscript/debate[22]"]
+"DISTINGUISHED VISITORS" = ["/hansard/chamber.xscript/debate[19]"]
 "QUESTIONS WITHOUT NOTICE" = ["/hansard/chamber.xscript/debate[18]", "/hansard/chamber.xscript/debate[20]"]
+BUSINESS = ["/hansard/chamber.xscript/debate[2]", "/hansard/chamber.xscript/debate[12]", "/hansard/chamber.xscript/debate[25]"]
 
 [QUESTION_OPTION]
 QUESTIONS_WITHOUT_NOTICE = true
