--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -10,16 +10,17 @@ TALKER_NAME_INTO_CONTENT = true
 GET_ALL_TEXT = true
 
 [XPATHS]
-QUESTION = "//question"
 TALK_CONTENT = "//talk.text"
-INTERJECTION = "//interjection"
-DEBATE_TITLE = "/debateinfo/title"
-TALK_NODE = "//talk.start"
-CONTINUE = "//continue"
-SUBDIV_1 = "//p"
-TALKER = "//talker"
 ANSWER = "//answer"
+QUESTION = "//question"
+DEBATE_TITLE = "/debateinfo/title"
+CONTINUE = "//continue"
+INTERJECTION = "//interjection"
+SUBDEBATE_TITLE = "/subdebateinfo/title"
+TALK_NODE = "//talk.start"
+TALKER = "//talker"
 SUBDIV_1_TALKER = "//a"
+SUBDIV_1 = "//p"
 
 [GLOBAL]
 BASE_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/"
@@ -30,7 +31,7 @@ OUTPUT_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/Output"
 
 [METADATA]
 ORIGINAL = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/scrape_set_up.toml"
-DATE = "2024-04-24"
+DATE = "2024-05-01"
 
 [SECTION_XPATHS]
 "MATTERS OF PUBLIC IMPORTANCE" = ["/hansard/chamber.xscript/debate[26]"]
@@ -52,5 +53,4 @@ STATEMENTS = ["/hansard/chamber.xscript/debate[21]", "/hansard/chamber.xscript/d
 BUSINESS = ["/hansard/chamber.xscript/debate[2]", "/hansard/chamber.xscript/debate[12]", "/hansard/chamber.xscript/debate[25]"]
 
 [QUESTION_OPTION]
-QUESTIONS_WITHOUT_NOTICE = true
 A_ASPARENT = true
