--- a/Scraper.jl/src/Output/scrape_set_up.toml
+++ b/Scraper.jl/src/Output/scrape_set_up.toml
@@ -2,6 +2,7 @@
 INTER_UNDER_NODE = true
 SEP_BY_SUBDIV_1 = true
 TALKER_NAME_INTO_CONTENT = true
+A_ASPARENT = true
 
 [WHICH_SECTIONS]
 "QUESTIONS WITHOUT NOTICE" = true
@@ -11,15 +12,18 @@ GET_ALL_TEXT = true
 
 [XPATHS]
 TALK_CONTENT = "//talk.text"
+TITLE = "/title"
 ANSWER = "//answer"
 QUESTION = "//question"
 DEBATE_TITLE = "/debateinfo/title"
 CONTINUE = "//continue"
 INTERJECTION = "//interjection"
-SUBDEBATE_TITLE = "/subdebateinfo/title"
+SUBDEBATE_TITLE = "//subdebateinfo/title"
 TALK_NODE = "//talk.start"
 TALKER = "//talker"
+SPEECH = "/speech"
 SUBDIV_1_TALKER = "//a"
+SUBDEBATE = "//subdebateinfo"
 SUBDIV_1 = "//p"
 
 [GLOBAL]
@@ -31,7 +35,7 @@ OUTPUT_PATH = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/Output"
 
 [METADATA]
 ORIGINAL = "/home/eve/Desktop/Parlinfo_text_project/Scraper.jl/src/scrape_set_up.toml"
-DATE = "2024-05-01"
+DATE = "2024-05-06"
 
 [SECTION_XPATHS]
 "MATTERS OF PUBLIC IMPORTANCE" = ["/hansard/chamber.xscript/debate[26]"]
