--- a/Inputs/hansard/hansard.toml
+++ b/Inputs/hansard/hansard.toml
@@ -1,5 +1,8 @@
 [ global ]
-output_path = "../../Outputs/hansard"
+    output_path = "../../Outputs/hansard"
 
 [[ XML_DIR ]]
     path = "xmls"
+
+[ general_options ]
+    csv_exist = true
