--- a/Inputs/hansard/hansard.toml
+++ b/Inputs/hansard/hansard.toml
@@ -2,7 +2,7 @@
     output_path = "../../Outputs/hansard"
 
 #[[ XML ]]
-#    filename = "xmls/1926/1926_08_05.xml"
+#    filename = "xmls/1964/1964_10_29.xml"
 
 
 [[ XML_DIR ]]
@@ -11,5 +11,5 @@
 [ general_options ]
     csv_exist = false
     edit = true
-    year = [1901,2024]
-    overwrite = false
+    year = [1980,2024]
+    overwrite = true
