quote parent node issue and extra flatten

--- a/Inputs/hansard/hansard.toml
+++ b/Inputs/hansard/hansard.toml
@@ -11,6 +11,6 @@
 
 [ general_options ]
     csv_exist = false
-    edit = ["re","free_node","flatten"]
+    edit = ["re","free_node","flatten","flatten"]
     year = [2024,2024]
     overwrite = true
