--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,5 +3,6 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 Latexify = "23fbe1c1-3f47-55db-b15f-69d7ec21a316"
 ParlinfoSpeechScraper = "3fb2ed58-985e-428b-9a27-55663dc902eb"
