--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -7,11 +7,11 @@
 
 
 [[ XML_DIR ]]
-    path = "xmls"
+    path = "house_xmls"
 
 [ general_options ]
     which_house = "house"
-    csv_exist = false
+    csv_exist = true
     edit = ["re","free_node","flatten","flatten","column_decorate"]
     year = [1901,2025]
     overwrite = true
