--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -11,11 +11,14 @@
 
 [ general_options ]
     which_house = "house"
-    #true to skip scraping, edit still remains
-    csv_exist = false
-    edit = ["speaker_time","re","free_node","flatten","flatten","column_decorate","re"]
     year = [1901,2025]
-    #false to skip both scraping and edits
-    overwrite = true
-    sample = true
-    remove_nums = [1,2,3,4,5,6]
+    #false to skip scraping, edit still remains
+    xml_parsing = false
+    edit = ["speaker_time","re","free_node","flatten","flatten","column_decorate","re"]
+    #false to skip edits
+    csv_edit = false
+    #false to skip all run xml functions and only to write samples or remove steps
+    run_xml = false
+    sample = false
+    remove_nums = [0,1,2,3,4,5,6]
+    xml_name_clean = false
