--- a/Inputs/hansard/senate.toml
+++ b/Inputs/hansard/senate.toml
@@ -11,11 +11,17 @@
 
 [ general_options ]
     which_house = "senate"
-    csv_exist = false
+    year = [1901,2025]
+    #false to skip scraping, edit still remains
+    xml_parsing = true
     edit = ["speaker_time","re","free_node","flatten","flatten","column_decorate","re"]
-    year = [1901,1901]
-    overwrite = true
-    sample = false
-    remove_nums = [1,2,3,4,5,6]
-    #whether to clean the xml names
-    xml_name_clean = true
+    #false to skip edits
+    csv_edit = false
+    #false to skip all run xml functions and only to write samples or remove steps
+    run_xml = false
+    sample = true
+    remove_nums = [0,1,2,3,4,5,6]
+    xml_name_clean = false
+
+
+
