--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -3,7 +3,7 @@
 
 ###choose one: XML or XML_DIR
 #[[ XML ]]
-#    filename = "xmls/2009/2009_06_03.xml"
+#    filename = "house_xmls/1983/1983_11_09.xml"
 
 
 [[ XML_DIR ]]
@@ -11,14 +11,14 @@
 
 [ general_options ]
     which_house = "house"
-    year = [1901,2025]
+    year = [1996,1997]
     #false to skip scraping, edit still remains
-    xml_parsing = false
+    xml_parsing = true
     edit = ["speaker_time","re","free_node","flatten","flatten","column_decorate","re"]
     #false to skip edits
-    csv_edit = false
+    csv_edit = true
     #false to skip all run xml functions and only to write samples or remove steps
-    run_xml = false
-    sample = false
+    run_xml_toggle = true
+    sample = true
     remove_nums = [0,1,2,3,4,5,6]
     xml_name_clean = false
