--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -2,12 +2,12 @@
     output_path = "../../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
-[[ XML ]]
-    filename = "house_xmls/1902/1902_01_22.xml"
+#[[ XML ]]
+#    filename = "house_xmls/1902/1902_01_22.xml"
 
 
-#[[ XML_DIR ]]
-#    path = "house_xmls"
+[[ XML_DIR ]]
+    path = "house_xmls"
 
 [ general_options ]
     which_house = "house"
