--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
@@ -25,3 +26,4 @@ Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 BetterInputFiles = "1.3.0"
 DocStringExtensions = "0.9.5"
 Logging = "1.11.0"
+Random = "1.11.0"
