--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "Inputs"]
-	path = Inputs
-	url = git@github.com:Australian-Parliamentary-Speech/Inputs.git
-[submodule "Outputs"]
-	path = Outputs
-	url = git@github.com:Australian-Parliamentary-Speech/Outputs.git
+#[submodule "Inputs"]
+#	path = Inputs
+#	url = git@github.com:Australian-Parliamentary-Speech/Inputs.git
+#[submodule "Outputs"]
+#	path = Outputs
+#	url = git@github.com:Australian-Parliamentary-Speech/Outputs.git
