--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -2,16 +2,16 @@
     output_path = "../../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
-[[ XML ]]
-    filename = "house_xmls/1974/1974_03_13.xml"
+#[[ XML ]]
+#    filename = "house_xmls/1974/1974_03_13.xml"
 
 
-#[[ XML_DIR ]]
-#    path = "house_xmls"
+[[ XML_DIR ]]
+    path = "house_xmls"
 
 [ general_options ]
     which_house = "house"
-    year = [1970,1980]
+    year = [1980,1980]
     xml_parsing = true
     edit = ["speaker_time","re","free_node","flatten","flatten","column_decorate","re"]
     csv_edit = true
