--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -2,8 +2,8 @@
     output_path = "../../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
-[[ XML ]]
-    filename = "house_xmls/2011/2011_09_13.xml"
+#[[ XML ]]
+#    filename = "house_xmls/2011/2011_09_13.xml"
 
 
 [[ XML_DIR ]]
@@ -11,7 +11,7 @@
 
 [ general_options ]
     which_house = "house"
-    year = [2025,2025]
+    year = [1901,2025]
     xml_parsing = true
     edit = ["speaker_time","re","stage_direction","free_node","flatten","flatten","column_decorate","final_re"]
     csv_edit = true
