--- a/Inputs/hansard/senate.toml
+++ b/Inputs/hansard/senate.toml
@@ -7,7 +7,10 @@
 
 
 [[ XML_DIR ]]
-    path = "senate_xmls"
+    path = ["senate_xmls"]
+
+#[[ XML_DIR ]]
+#    path = 
 
 [ general_options ]
     which_house = "senate"
