--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -2,18 +2,18 @@
     output_path = "../../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
-#[[ XML ]]
-#    filename = "house_xmls/2022/2022_02_16.xml"
+[[ XML ]]
+    filename = "house_xmls/1943/1943_02_05.xml"
 
 
 #[[ XML_DIR ]]
 #    path = "house_test_xmls"
 
-[[ XML_DIR ]]
-    path = "../../../../Download/house_xmls"
-
-[[ XML_DIR ]]
-    path = "../../../../sgml2xml/house_xmls"
+#[[ XML_DIR ]]
+#    path = "../../../Download/house_xmls"
+#
+#[[ XML_DIR ]]
+#    path = "../../../sgml2xml/house_xmls"
 
 
 [ general_options ]
@@ -24,5 +24,5 @@
     csv_edit = true
     run_xml_toggle = true
     sample = true
-    remove_nums = [0,1,2,3,4,5,6,7]
+    remove_nums = []
     xml_name_clean = false
