--- a/Inputs/hansard/house.toml
+++ b/Inputs/hansard/house.toml
@@ -2,23 +2,23 @@
     output_path = "../../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
-[[ XML ]]
-    filename = "house_xmls/2010/2010_02_10.xml"
+#[[ XML ]]
+#    filename = "house_xmls/2010/2010_02_10.xml"
 
+
+#[[ XML_DIR ]]
+#    path = "house_xmls"
 
 [[ XML_DIR ]]
-    path = "house_test_xmls"
-
-#[[ XML_DIR ]]
- #   path = "../../../Download/house_xmls"
+    path = "../../../Download/house_xmls"
 #
-#[[ XML_DIR ]]
-#    path = "../../../sgml2xml/house_xmls"
+[[ XML_DIR ]]
+    path = "../../../sgml2xml/house_xmls"
 
 
 [ general_options ]
     which_house = "house"
-    year = [1901,2025]
+    year = [2009,2009]
     xml_parsing = true
     edit = ["speaker_time","re","stage_direction","free_node","flatten","flatten","column_decorate","final_re"]
     csv_edit = true
