--- a/Inputs/house.toml
+++ b/Inputs/house.toml
@@ -1,19 +1,19 @@
 [ global ]
-    output_path = "../../Outputs/HouseCSV/hansard"
+    output_path = "../Outputs/HouseCSV/hansard"
 
 ###choose one: XML or XML_DIR
 #[[ XML ]]
-#    filename = "house_xmls/2010/2010_02_10.xml"
+#    filename = "hansard/house_xmls/2010/2010_02_10.xml"
 
 
 #[[ XML_DIR ]]
-#    path = "house_xmls"
+#    path = "hansard/house_xmls"
 
 [[ XML_DIR ]]
-    path = "../../../Download/house_xmls"
+    path = "../../Download/house_xmls"
 #
 [[ XML_DIR ]]
-    path = "../../../sgml2xml/house_xmls"
+    path = "../../sgml2xml/house_xmls"
 
 
 [ general_options ]
