--- a/Inputs/house.toml
+++ b/Inputs/house.toml
@@ -9,8 +9,8 @@
 #[[ XML_DIR ]]
 #    path = "hansard/house_xmls"
 
-[[ XML_DIR ]]
-    path = "../../Download/house_xmls"
+#[[ XML_DIR ]]
+#    path = "../../Download/house_xmls"
 #
 [[ XML_DIR ]]
     path = "../../sgml2xml/house_xmls"
