--- a/Inputs/house_debug.toml
+++ b/Inputs/house_debug.toml
@@ -7,17 +7,17 @@
 
 
 [[ XML_DIR ]]
-    path = "hansard/house_test_xmls"
+    path = "hansard/house_xmls"
 
 
 
 [ general_options ]
     which_house = "house"
-    year = [2000,2025]
+    year = [1901,2025]
     xml_parsing = true
     edit = ["speaker_time","re","stage_direction","free_node","flatten","flatten","column_decorate","final_re"]
     csv_edit = true
     run_xml_toggle = true
     sample = true
-    remove_nums = []
+    remove_nums = [0,1,2,3,4,5,6,7]
     xml_name_clean = false
