--- a/Inputs/senate_debug.toml
+++ b/Inputs/senate_debug.toml
@@ -2,12 +2,12 @@
     output_path = "../Outputs/SenateCSV/hansard"
 
 ###choose one: XML or XML_DIR
-[[ XML ]]
-    filename = "hansard/senate_xmls/2005/2005_09_08.xml"
+#[[ XML ]]
+#    filename = "hansard/senate_xmls/1945/1945_03_02.xml"
 
 
-#[[ XML_DIR ]]
-#    path = "hansard/senate_xmls"
+[[ XML_DIR ]]
+    path = "hansard/senate_xmls"
 
 #[[ XML_DIR ]]
 #    path = "../../Download/senate_xmls"
