--- a/test/test_inputs/test.toml
+++ b/test/test_inputs/test.toml
@@ -5,4 +5,4 @@
     which_sim_test = "fuzzy"
     fuzzy_search = [5,2]
     which_house = "house"
-    which_tests = ["gold_standard","summary","toy_xml_test","MP_specific_gs"]
+    which_tests = ["summary"]
