--- a/Inputs/house_debug.toml
+++ b/Inputs/house_debug.toml
@@ -6,15 +6,15 @@
 #    filename = "hansard/house_xmls/1996/1996_12_12.xml"
 
 
-[[ XML_DIR ]]
-    path = "hansard/house_xmls"
+#[[ XML_DIR ]]
+#    path = "hansard/house_xmls"
 
 [[ XML_DIR ]]
     path = "hansard/house_reserve_xmls"
 
 [ general_options ]
     which_house = "house"
-    year = [2025,2025]
+    year = [1901,2025]
     xml_parsing = true
     edit = ["speaker_time","re","stage_direction","free_node","flatten","flatten","column_decorate","final_re"]
     csv_edit = true
