--- a/test/test_inputs/Output/test.toml
+++ b/test/test_inputs/Output/test.toml
@@ -6,13 +6,13 @@ LOGGING = true
 OUTPUT_PATH = "/home/eve/Development/ParlinfoSpeechScraper/test/test_inputs/Output"
 
 [METADATA]
-TIME = "16:39:34"
+TIME = "16:16:34"
 ORIGINAL = "/home/eve/Development/ParlinfoSpeechScraper/test/test_inputs/test.toml"
-DATE = "2026-01-20"
+DATE = "2026-01-21"
 
 [TEST_PARAMS]
 WHICH_SIM_TEST = "fuzzy"
 SKIP_COLS = ["speaker_no", "non_speech_flag", "page.no", "name", "electorate", "party", "role", "path", "Speaker", "Time", "Other"]
 WHICH_HOUSE = "house"
-WHICH_TESTS = ["gold_standard", "summary", "toy_xml_test", "MP_specific_gs"]
+WHICH_TESTS = ["summary"]
 FUZZY_SEARCH = [5, 2]
