--- a/Inputs/senate_debug.toml
+++ b/Inputs/senate_debug.toml
@@ -6,8 +6,8 @@
 #    filename = "hansard/senate_xmls/1945/1945_03_02.xml"
 
 
-[[ XML_DIR ]]
-    path = "hansard/senate_xmls"
+#[[ XML_DIR ]]
+#    path = "hansard/senate_xmls"
 
 [[ XML_DIR ]]
     path = "hansard/senate_reserve_xmls"
